--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
 	},
 	"devDependencies": {
 		"@commitlint/cli": "^7.5.2",
+		"babel-core": "^6.26.3",
 		"babel-eslint": "^10.1.0",
+		"babel-loader": "^8.2.3",
 		"concurrently": "^3.5.1",
 		"eslint": "^7.29.0",
 		"eslint-config-airbnb": "^16.1.0",
@@ -51,8 +53,7 @@
 		"nps": "^5.9.5",
 		"nps-utils": "^1.7.0",
 		"prettier": "^2.3.2",
-		"babel-core": "^6.26.3",
-		"babel-loader": "^8.2.3"
+		"yorkie": "^2.0.0"
 	},
 	"engines": {
 		"node": ">=10.16"
