--- a/packages/vue/examples/reactive-list/package.json
+++ b/packages/vue/examples/reactive-list/package.json
@@ -1,40 +1,24 @@
+
 {
-	"name": "reactive-list",
-	"version": "0.1.0",
-	"private": true,
-	"scripts": {
-		"serve": "vue-cli-service serve",
-		"build": "vue-cli-service build",
-		"lint": "vue-cli-service lint"
-	},
-	"dependencies": {
-		"@appbaseio/reactivesearch-vue": "3.3.0",
-		"vue": "^3.2.5",
-		"vuejs-paginate": "^2.1.0"
-	},
-	"devDependencies": {
-		"@vue/cli-plugin-babel": "^5.0.8",
-		"@vue/cli-service": "^5.0.8",
-		"@vue/compiler-sfc": "^3.1.0",
-		"node-ipc": "^11.1.0"
-	},
-	"eslintConfig": {
-		"root": true,
-		"env": {
-			"node": true
-		},
-		"extends": [
-			"plugin:vue/essential",
-			"eslint:recommended"
-		],
-		"rules": {},
-		"parserOptions": {
-			"parser": "babel-eslint"
-		}
-	},
-	"browserslist": [
-		"> 1%",
-		"last 2 versions",
-		"not ie <= 8"
-	]
+  "name": "reactive-list",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "serve": "volar-preview-vite",
+    "build": "vue-tsc && vite build",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "vue": "^3.3.9",
+	"@appbaseio/reactivesearch-vue": "3.3.0",
+	"vuejs-paginate": "^2.1.0"
+  },
+  "devDependencies": {
+    "@codesandbox/vue-preview": "^0.1.1-alpha.16",
+    "@vitejs/plugin-vue": "^4.5.0",
+    "typescript": "^5.3.2",
+    "vite": "^5.0.4",
+    "vue-tsc": "^1.8.24"
+  }
 }
