--- a/packages/vue/examples/reactive-list/package.json
+++ b/packages/vue/examples/reactive-list/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "reactive-list",
   "private": true,
@@ -10,15 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@appbaseio/reactivesearch-vue": "3.3.0",
     "vue": "^3.3.9",
-	"@appbaseio/reactivesearch-vue": "3.3.0",
-	"vuejs-paginate": "^2.1.0"
+    "vuejs-paginate": "^2.1.0"
   },
   "devDependencies": {
     "@codesandbox/vue-preview": "^0.1.1-alpha.16",
     "@vitejs/plugin-vue": "^4.5.0",
-    "typescript": "^5.3.2",
-    "vite": "^5.0.4",
-    "vue-tsc": "^1.8.24"
+    "@vue/babel-preset-app": "^5.0.8",
+    "vite": "^5.0.4"
   }
 }
