--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@appbaseio/reactivesearch-vue",
-	"version": "3.3.2",
+	"version": "3.3.3",
 	"main": "dist/cjs/index.js",
 	"jsnext:main": "dist/es/index.js",
 	"module": "dist/es/index.js",
@@ -44,6 +44,7 @@
 		"compute-scroll-into-view": "^1.0.11",
 		"emotion": "11.0.0",
 		"hotkeys-js": "^3.8.7",
+		"isomorphic-dompurify": "^1.12.0",
 		"ngeohash": "^0.6.3",
 		"polished": "^2.2.0",
 		"redux": "^4.0.0",
@@ -53,8 +54,7 @@
 		"vue-highlight-words": "^1.2.0",
 		"vue-no-ssr": "^1.1.0",
 		"vue-slider-component": "next",
-		"vue-types": "^5.0.2",
-		"isomorphic-dompurify": "^1.12.0"
+		"vue-types": "^5.0.2"
 	},
 	"peerDependencies": {
 		"vue": "^3.1.0"
