--- a/packages/vue/examples/reactive-google-map-nuxt/package.json
+++ b/packages/vue/examples/reactive-google-map-nuxt/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "scripts": {
     "build": "nuxt build",
-    "dev": "nuxt dev",
+    "dev": "nuxt dev --port 5173",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
