--- a/packages/vue/examples/with-nuxt-typescript/package.json
+++ b/packages/vue/examples/with-nuxt-typescript/package.json
@@ -4,7 +4,7 @@
 	"name": "with-nuxt-typescript",
 	"scripts": {
 		"build": "nuxt build",
-		"dev": "nuxt dev",
+		"dev": "nuxt dev --port 5173",
 		"generate": "nuxt generate",
 		"preview": "nuxt preview",
 		"postinstall": "nuxt prepare"
