--- a/packages/vue/examples/search-showcase/searchbox-inline-ai-response/package.json
+++ b/packages/vue/examples/search-showcase/searchbox-inline-ai-response/package.json
@@ -11,6 +11,7 @@
 	"dependencies": {
 		"@appbaseio/reactivesearch-vue": "3.3.5",
 		"vue": "^3.3.9",
+		"bootstrap": "^5.2.3",
 		"vuejs-paginate": "^2.1.0"
 	},
 	"devDependencies": {
